<?xml version="1.0"?>
<package>
  <name>hase_control</name>
  <version>0.0.0</version>
  <description>Controllers for Hase</description>

  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
  <author email="garyservin@gmail.com">Gary Servin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>topic_tools</run_depend>

  <export>
  </export>
</package>
