<?xml version="1.0"?>
<package>
  <name>hase_description</name>
  <version>0.0.0</version>
  <description>URDF robot description for Hase</description>

  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
  <author email="garyservin@gmail.com">Gary Servin</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>sick_tim</run_depend>

  <export>
  </export>
</package>
